--- a/src/app/components/searcher/searcher.component.css
+++ b/src/app/components/searcher/searcher.component.css
@@ -1,3 +1,21 @@
 .custom-dropdown-menu {
   width: 100%;
 }
+
+.overlay {
+  background-color: rgb(0, 0, 0, 0.5);
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 2;
+  cursor: pointer;
+}
+
+.searcher-container {
+  position: absolute;
+  z-index: 3;
+}
