--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,1 +1,11 @@
 <app-searcher></app-searcher>
+<div class="container mt-3">
+  <div class="row">
+    <div class="col-sm-6">
+      <span>queue player goes here</span>
+    </div>
+    <div class="col-sm-6">
+      <app-result-info></app-result-info>
+    </div>
+  </div>
+</div>
