--- a/src/app/components/searcher/searcher.component.html
+++ b/src/app/components/searcher/searcher.component.html
@@ -6,6 +6,10 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
+      <!-- TODO: work on getting error handling -->
+      <!-- <span class="alert-danger" *ngIf="resultsErr$ | async as resultsErr">{{
+        resultsErr.message
+      }}</span> -->
       <div class="form-group">
         <label for="track-searcher" class="form-label"
           >Search for a track:</label
@@ -15,9 +19,8 @@
           id="track-searcher"
           name="track-searcher"
           class="form-control"
-          ngModel
-          #trackSearcherRef
-          (keyup)="onSearch(trackSearcherRef.value)"
+          [(ngModel)]="searcherValue"
+          (keyup)="onSearch(searcherValue)"
         />
       </div>
       <div class="dropdown mt-1">
@@ -29,13 +32,17 @@
             <li
               class="dropdown-item d-flex align-items-center p-3"
               *ngFor="let item of results.tracks.items"
+              (click)="onSelectTrack(item)"
             >
               <img
                 style="width: 100px; height: auto"
                 src="{{ item.album.images[1].url }}"
                 alt="{{ item.name + ' album cover' }}"
               />
-              <h3 class="ms-3">{{ item.name }}</h3>
+              <h3 class="ms-3 me-auto">{{ item.name }}</h3>
+              <div>
+                <button class="btn btn-sm btn-success">&plus;</button>
+              </div>
             </li>
           </ng-container>
         </ul>
@@ -43,3 +50,6 @@
     </div>
   </div>
 </div>
+<!-- <button style="position: absolute; z-index: 100" (click)="test()">
+  Click Me
+</button> -->
