working web-player service

--- a/src/app/components/bottom-player/bottom-player.component.html
+++ b/src/app/components/bottom-player/bottom-player.component.html
@@ -1,1 +1,5 @@
-<p>bottom-player works!</p>
+<div class="bottom-player-nav">
+  <div class="bottom-player-controls">
+    <button class="btn btn-success rounded">Play</button>
+  </div>
+</div>
