--- a/src/app/components/searcher/searcher.component.html
+++ b/src/app/components/searcher/searcher.component.html
@@ -7,9 +7,9 @@
   <div class="row">
     <div class="col-md-12">
       <!-- TODO: work on getting error handling -->
-      <!-- <span class="alert-danger" *ngIf="resultsErr$ | async as resultsErr">{{
+      <span class="alert-danger" *ngIf="resultsErr$ | async as resultsErr">{{
         resultsErr.message
-      }}</span> -->
+      }}</span>
       <div class="form-group">
         <label for="track-searcher" class="form-label"
           >Search for a track:</label
@@ -50,6 +50,6 @@
     </div>
   </div>
 </div>
-<!-- <button style="position: absolute; z-index: 100" (click)="test()">
+<button style="position: absolute; z-index: 100" (click)="test()">
   Click Me
-</button> -->
+</button>
