created queue service

--- a/src/app/components/searcher/searcher.component.html
+++ b/src/app/components/searcher/searcher.component.html
@@ -50,6 +50,6 @@
     </div>
   </div>
 </div>
-<button style="position: absolute; z-index: 100" (click)="test()">
+<!-- <button style="position: absolute; z-index: 100" (click)="test()">
   Click Me
-</button>
+</button> -->
