adding queue logic

--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -8,4 +8,10 @@
       <app-result-info></app-result-info>
     </div>
   </div>
+  <hr class="my-5" />
+  <div class="row">
+    <div class="col-sm-12">
+      <app-queue></app-queue>
+    </div>
+  </div>
 </div>
