--- a/src/app/components/searcher/searcher.component.html
+++ b/src/app/components/searcher/searcher.component.html
@@ -29,21 +29,25 @@
           [class.show]="results$ !== undefined"
         >
           <ng-container *ngIf="results$ | async as results">
-            <li
-              class="dropdown-item d-flex align-items-center p-3"
-              *ngFor="let item of results.tracks.items"
-              (click)="onSelectTrack(item)"
-            >
-              <img
-                style="width: 100px; height: auto"
-                src="{{ item.album.images[1].url }}"
-                alt="{{ item.name + ' album cover' }}"
-              />
-              <h3 class="ms-3 me-auto">{{ item.name }}</h3>
-              <div>
-                <button class="btn btn-sm btn-success">&plus;</button>
-              </div>
-            </li>
+            <div *ngFor="let item of results.tracks.items">
+              <li
+                class="dropdown-item d-flex align-items-center p-3"
+                (click)="onSelectTrack(item)"
+              >
+                <img
+                  style="width: 100px; height: auto"
+                  src="{{ item.album.images[1].url }}"
+                  alt="{{ item.name + ' album cover' }}"
+                />
+                <h3 class="ms-3 me-auto">{{ item.name }}</h3>
+              </li>
+              <button
+                (click)="onAddTrackToQueue(item)"
+                class="btn btn-sm btn-success"
+              >
+                &plus;
+              </button>
+            </div>
           </ng-container>
         </ul>
       </div>
