--- a/src/app/components/searcher/searcher.component.html
+++ b/src/app/components/searcher/searcher.component.html
@@ -10,7 +10,7 @@
       <span class="alert-danger" *ngIf="resultsErr$ | async as resultsErr">{{
         resultsErr.message
       }}</span>
-      <div class="form-group">
+      <div class="form-group searcher-form-group">
         <label for="track-searcher" class="form-label"
           >Search for a track:</label
         >
