creating playlist-modal component

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -21,10 +21,14 @@
     >
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/search">Search</a>
+          <a class="nav-link" routerLink="/search" routerLinkActive="active"
+            >Search</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link">Playlists</a>
+          <a class="nav-link" routerLink="/playlists" routerLinkActive="active"
+            >Playlists</a
+          >
         </li>
         <li class="nav-item dropdown">
           <a
