--- a/src/app/components/playlists/playlists.component.html
+++ b/src/app/components/playlists/playlists.component.html
@@ -1,1 +1,6 @@
-<p>playlists works!</p>
+<button class="btn btn-primary">New Playlist</button>
+<div class="container">
+  <div class="playlist-grid">
+    <app-playlist></app-playlist>
+  </div>
+</div>
