--- a/src/app/components/searcher/searcher.component.html
+++ b/src/app/components/searcher/searcher.component.html
@@ -45,7 +45,7 @@
                 (click)="onAddTrackToQueue(item)"
                 class="btn btn-sm btn-success"
               >
-                &plus;
+                Queue
               </button>
             </div>
           </ng-container>
