--- a/src/app/components/playlists/playlist/playlist.component.html
+++ b/src/app/components/playlists/playlist/playlist.component.html
@@ -15,6 +15,6 @@
     <p class="card-text">
       {{ description }}
     </p>
-    <a class="btn btn-primary">Details</a>
+    <a class="btn btn-primary" (click)="onClick()">Details</a>
   </div>
 </div>
