--- a/src/app/components/playlists/playlists.component.css
+++ b/src/app/components/playlists/playlists.component.css
@@ -1,5 +1,30 @@
+:host {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.playlists {
+  background-color: #d2d2d2;
+  padding: 20px;
+  border-radius: 8px;
+  height: 100%;
+}
+
 .playlist-grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-auto-rows: auto;
+}
+
+.playlists-button {
+  float: right;
+  margin: 1rem;
+}
+
+.playlist-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 6fr;
+  height: 100%;
 }
