--- a/src/app/components/playlists/playlists.component.html
+++ b/src/app/components/playlists/playlists.component.html
@@ -1,15 +1,21 @@
-<button class="btn btn-primary" (click)="onNewPlaylist()">New Playlist</button>
-<div class="container">
-  <div class="playlist-grid">
-    <ng-container *ngIf="getPlaylists() | async as playlists">
-      <app-playlist
-        *ngFor="let playlist of playlists; let i = index"
-        [name]="playlist.name"
-        [description]="playlist.description"
-        [tracks]="playlist.tracks"
-        (onDetailsEvent)="openPlaylist(i)"
-      ></app-playlist>
-    </ng-container>
+<div class="container playlist-container">
+  <div class="playlist-btn-group">
+    <button class="btn btn-primary playlists-button" (click)="onNewPlaylist()">
+      New Playlist
+    </button>
+  </div>
+  <div class="playlists">
+    <div class="playlist-grid">
+      <ng-container *ngIf="getPlaylists() | async as playlists">
+        <app-playlist
+          *ngFor="let playlist of playlists; let i = index"
+          [name]="playlist.name"
+          [description]="playlist.description"
+          [tracks]="playlist.tracks"
+          (onDetailsEvent)="openPlaylist(i)"
+        ></app-playlist>
+      </ng-container>
+    </div>
   </div>
   <router-outlet></router-outlet>
 </div>
