--- a/src/app/components/playlists/playlist-modal/playlist-modal.component.css
+++ b/src/app/components/playlists/playlist-modal/playlist-modal.component.css
@@ -1,7 +1,18 @@
-/* TODO: add CSS animation for modal appearing */
-
 :host {
   --player-default-border: 1px solid #d2d2d2;
+}
+
+.smp-playlist-modal {
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-content: center;
+}
+
+.testing-modal {
+  width: 100%;
+  animation-name: modal;
+  animation-duration: 200ms;
+  animation-fill-mode: forwards;
 }
 
 .playlist-row {
@@ -55,4 +66,26 @@
 .first-song {
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
+}
+
+@keyframes modal {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgb(0, 0, 0, 0.5);
+  z-index: 2;
+  cursor: pointer;
 }
