--- a/src/app/components/playlists/playlist-modal/playlist-modal.component.html
+++ b/src/app/components/playlists/playlist-modal/playlist-modal.component.html
@@ -1,90 +1,92 @@
-<div style="display: inherit" class="modal" tabindex="-1">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title me-auto">
-          {{
-            playlistForm.get("name")?.value
-              ? playlistForm.get("name")?.value
-              : "New Playlist"
-          }}
-        </h5>
-        <button
-          (click)="onDelete()"
-          type="button"
-          class="btn btn-outline-danger"
-        >
-          <fa-icon [icon]="faTrashCan"></fa-icon>
-        </button>
-        <button
-          type="button"
-          style="margin-left: 0.7rem"
-          class="btn-close"
-          aria-label="Close"
-          (click)="onClose()"
-        ></button>
-      </div>
-      <div class="modal-body">
-        <form class="mb-3" [formGroup]="playlistForm">
-          <!-- TODO: add validations -->
-          <div class="form-group">
-            <label class="form-label" for="name">Playlist Name</label>
-            <input
-              class="form-control"
-              type="text"
-              id="name"
-              name="name"
-              formControlName="name"
-            />
-          </div>
-          <div class="form-group">
-            <label class="form-label" for="description">Description</label>
-            <textarea
-              class="form-control"
-              formControlName="description"
-              name="description"
-              id="description"
-              cols="30"
-              rows="3"
-            ></textarea>
-          </div>
-        </form>
-        <hr />
-        <app-searcher></app-searcher>
-        <ng-container *ngIf="tracks.length > 0">
-          <div class="playlist-table">
-            <div class="playlist-row">
-              <!-- <div class="playlist-col playlist-header"></div> -->
-              <div
-                class="playlist-col"
-                *ngFor="let track of tracks; let i = index"
-                [ngClass]="{ 'first-song': i === 0 }"
-              >
-                <img
-                  class="playlist-img"
-                  src="{{ track.album.images[1].url }}"
-                  alt="{{ track.name }} Image"
-                />
-                <h4>{{ track.name }}</h4>
-                <div class="playlist-btns">
-                  <button
-                    (click)="onDeleteTrack(i)"
-                    class="btn btn-sm btn-danger"
-                  >
-                    X
-                  </button>
-                  <button class="btn btn-sm btn-secondary">Queue</button>
-                  <button class="btn btn-sm btn-success">Play</button>
+<div class="overlay">
+  <div class="modal smp-playlist-modal" tabindex="-1">
+    <div class="testing-modal modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title me-auto">
+            {{
+              playlistForm.get("name")?.value
+                ? playlistForm.get("name")?.value
+                : "New Playlist"
+            }}
+          </h5>
+          <button
+            (click)="onDelete()"
+            type="button"
+            class="btn btn-outline-danger"
+          >
+            <fa-icon [icon]="faTrashCan"></fa-icon>
+          </button>
+          <button
+            type="button"
+            style="margin-left: 0.7rem"
+            class="btn-close"
+            aria-label="Close"
+            (click)="onClose()"
+          ></button>
+        </div>
+        <div class="modal-body">
+          <form class="mb-3" [formGroup]="playlistForm">
+            <!-- TODO: add validations -->
+            <div class="form-group">
+              <label class="form-label" for="name">Playlist Name</label>
+              <input
+                class="form-control"
+                type="text"
+                id="name"
+                name="name"
+                formControlName="name"
+              />
+            </div>
+            <div class="form-group">
+              <label class="form-label" for="description">Description</label>
+              <textarea
+                class="form-control"
+                formControlName="description"
+                name="description"
+                id="description"
+                cols="30"
+                rows="3"
+              ></textarea>
+            </div>
+          </form>
+          <hr />
+          <app-searcher></app-searcher>
+          <ng-container *ngIf="tracks.length > 0">
+            <div class="playlist-table">
+              <div class="playlist-row">
+                <!-- <div class="playlist-col playlist-header"></div> -->
+                <div
+                  class="playlist-col"
+                  *ngFor="let track of tracks; let i = index"
+                  [ngClass]="{ 'first-song': i === 0 }"
+                >
+                  <img
+                    class="playlist-img"
+                    src="{{ track.album.images[1].url }}"
+                    alt="{{ track.name }} Image"
+                  />
+                  <h4>{{ track.name }}</h4>
+                  <div class="playlist-btns">
+                    <button
+                      (click)="onDeleteTrack(i)"
+                      class="btn btn-sm btn-danger"
+                    >
+                      X
+                    </button>
+                    <button class="btn btn-sm btn-secondary">Queue</button>
+                    <button class="btn btn-sm btn-success">Play</button>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-        </ng-container>
-      </div>
-      <div class="modal-footer">
-        <button (click)="onSave()" type="button" class="btn btn-primary">
-          Save
-        </button>
+          </ng-container>
+        </div>
+        <div class="modal-footer">
+          <button (click)="onSave()" type="button" class="btn btn-primary">
+            Save
+          </button>
+        </div>
       </div>
     </div>
   </div>
