--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -2,15 +2,15 @@
 <div class="container mt-3">
   <div class="row">
     <div class="col-sm-6">
-      <span>queue player goes here</span>
-    </div>
-    <div class="col-sm-6">
-      <app-result-info></app-result-info>
+      <span>playlist viewer</span>
     </div>
   </div>
   <hr class="my-5" />
   <div class="row">
-    <div class="col-sm-12">
+    <div class="col-sm-6">
+      <app-result-info></app-result-info>
+    </div>
+    <div class="col-sm-6">
       <app-queue></app-queue>
     </div>
   </div>
