--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,5 @@
     </button>
   </div>
 </div> -->
-
-<app-navigation></app-navigation>
+<app-side-nav></app-side-nav>
 <router-outlet></router-outlet>
