--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,5 +2,5 @@
   display: block;
   width: 100%;
   height: 100%;
-  background-color: #e0e0e0;
+  background: linear-gradient(#ddd78d, #8e95de);
 }
