--- a/src/app/components/searcher/searcher.component.css
+++ b/src/app/components/searcher/searcher.component.css
@@ -15,14 +15,32 @@
   cursor: pointer;
 }
 
-.searcher-container {
-  position: absolute;
-  z-index: 3;
-}
+/* searcher container goods */
+/* track search input */
 
 .searcher-form-group {
   position: relative;
   z-index: 3;
+  float: right;
+  margin-top: 10px;
+}
+
+#track-searcher {
+  width: 400px;
+  height: 45px;
+  border-radius: 10px;
+  border: none;
+}
+
+@media only screen and (max-width: 25em) {
+  #track-searcher {
+    width: 18.75rem;
+  }
+
+  .searcher-container {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .loader {
