--- a/src/app/components/searcher/searcher.component.html
+++ b/src/app/components/searcher/searcher.component.html
@@ -5,20 +5,17 @@
 ></div>
 <div class="container">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-12 searcher-container">
       <!-- TODO: work on getting error handling -->
       <span class="alert-danger" *ngIf="resultsErr$ | async as resultsErr">{{
         resultsErr.message
       }}</span>
       <div class="form-group searcher-form-group">
-        <label for="track-searcher" class="form-label"
-          >Search for a track:</label
-        >
         <input
           type="text"
           id="track-searcher"
           name="track-searcher"
-          class="form-control"
+          placeholder="search for tracks"
           [(ngModel)]="searcherValue"
           (keyup)="onSearch(searcherValue)"
         />
